migration fixed - need to update seed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "meloras",
         "postgrator",
-        "predeploy"
+        "predeploy",
+        "spellcasting"
     ]
 }
