--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
+    "winston": "^3.3.3",
     "xss": "^1.0.8"
   },
   "devDependencies": {
