--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "start": "node src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production":"heroku run npm migrate",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "postdeploy":"npm run migrate:production"
   },
   "keywords": [],
+  "engines":{
+    "node" : "14.2.0"
+  },
   "author": "Me",
   "license": "ISC",
   "dependencies": {
