--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
-    "migrate:production":"heroku run npm migrate",
+    "migrate:production": "heroku run npm run migrate",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "postdeploy":"npm run migrate:production"
