--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "migrate:production": "heroku run npm run migrate",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "postdeploy":"npm run migrate:production"
+    "postdeploy": "npm run migrate:production"
   },
   "keywords": [],
-  "engines":{
-    "node" : "14.2.0"
+  "engines": {
+    "node": "14.2.0"
   },
   "author": "Me",
   "license": "ISC",
@@ -29,12 +29,13 @@
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
+    "serialize-javascript": "^4.0.0",
     "winston": "^3.3.3",
     "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.1",
     "nodemon": "^2.0.4",
     "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
